# port-selector

./: .commitlintrc.js  .eslintignore  .eslintrc.yml  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  README.zh-CN.md  changelog.config.js  index.d.ts  index.js  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vendor.yml
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yml  test.yml
__test__/: index.spec.ts
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: index.html  index.ts.html  infrastructure.ts.html
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: index.spec.ts  index.ts  infrastructure.ts  lib.rs
