[package]
name = "port-selector"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.4.2", default-features = false, features = ["napi4"] }
napi-derive = "2.4.1"
port-selector = "0.1.4"

[build-dependencies]
napi-build = "2.0.0"

[profile.release]
lto = true

